# poker_rake_bot

./: .env.production.template  .gitignore  ANDROID_EMULATOR_SETUP.md  BUILD_AND_LINT_REPORT.md  CHANGELOG_2026_01_21.md  CHECKLIST.md  CRITICAL_FIX_AUTO_PLAY.md  Dockerfile  FINAL_IMPROVEMENTS_REPORT.md  FINAL_STATUS.md  FULL_AUDIT_REPORT_2026_01_22.md  Makefile  NEXT_STEPS_AFTER_ANDROID_STUDIO.md  NOXPLAYER_SETUP.md  PPPOKER_BOT_README.md  PROJECT_STATUS.md  QUICK_START.md  README.md  WEEK2_COMPLETE.md  WEEK3_CHECKLIST.md  WEEK3_SUMMARY.md  WEEKLY_PROGRESS.md  alembic.ini  docker-compose.yml  env.template  pppoker_adb_bot_full.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
api/: __init__.py  audit.py  auth.py  auth_hmac.py  decision_logger.py  decision_maker.py  decision_stub.py  main.py  metrics.py  middleware.py  safe_mode.py  schemas.py  websocket.py
brain/: __init__.py  anti_pattern_router.py  bot_stats_calculator.py  decision_router.py  game_tree.py  mccfr.py  opponent_profiler.py  strategy_loader.py
config/: __init__.py  bot_styles.yaml  theme.py  theme.yaml
data/: __init__.py  database.py  init.sql  migrations_v1_2.sql  migrations_v1_3_week2.sql  migrations_week3_rake.sql  models.py  models_v1_2.py  redis_cache.py
docs/: API.md  API_EXAMPLES.md  FINAL_REPORT.md  FINAL_STATUS.md  GRAFANA_SETUP.md  MCCFR_IMPROVEMENTS.md  OPERATOR_MANUAL.md  PLURIBUS_INTEGRATION.md  README.md  STYLE_CONFIG.md  TECHNICAL_MANUAL.md
engine/: __init__.py  cards.py  env_wrapper.py  game_state_validator.py  hand_evaluator.py  state_encoder.py
k8s/: hpa.yaml  (+9 more)
(+113 files in other folders)
